--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 
 dependencies:
-   path: ^1.8.0
+   collection: ^1.15.0
    yaml: ^3.1.0
 
 dev_dependencies:
@@ -16,4 +16,3 @@ dev_dependencies:
   test: ^1.16.0
   dependency_validator: ^3.1.2
   coverage: ^1.0.3
-  pubspec: ^2.0.1
